# Scyclone

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeList.txt  LICENSE.md  README.md
.github/workflows/: build_test_artifacts.yml  cmake_ctest.yml
assets/: CMakeLists.txt
assets/openGLShaderPrograms/: BasicFragment.glsl  BasicVertex-2.glsl  BasicVertex.glsl  blob-3.glsl  blob-4.glsl  blob-5.glsl
cmake/: Onnx.cmake
docs/: install_instructions_mac.md  install_instructions_windows.md
installer/: CMakeLists.txt
installer/source/: Main.cpp  Main.h
installer/source/operations/: OperationManager.cpp  OperationManager.h
installer/source/operations/singleOperations/: FileDownload.cpp  FileDownload.h  PluginInstaller.cpp  PluginInstaller.h  RepoInspector.cpp  RepoInspector.h  UtilClass.h  ZipExtractor.cpp  ZipExtractor.h
installer/source/ui/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
installer/source/ui/components/: EndPage.cpp  EndPage.h  FormatPage.cpp  FormatPage.h  PathPage.cpp  PathPage.h  ProcessingPage.cpp  ProcessingPage.h  WelcomePage.cpp  WelcomePage.h
installer/source/ui/components/customComponent/: CustomButton.cpp  CustomButton.h  CustomLabel.cpp  CustomLabel.h
installer/source/ui/components/template/: TemplateInterfacePage.h
installer/source/ui/lookAndFeel/: InstallerLookAndFeel.h
installer/source/ui/lookAndFeel/singleLookAndFeels/: LabelLookAndFeel.h
installer/source/utils/: DefaultPaths.h  FormatOptions.h  OperatingSystem.h
modules/RnboExport/: CMakeLists.txt  description.json  presets.json  rnbo_granular.cpp
modules/RnboExport/rnbo/: .gitignore  LICENSE  RNBO.cpp  RNBO.h  version.cmake
modules/RnboExport/rnbo/adapters/juce/: RNBO_JuceAudioProcessor.cpp  RNBO_JuceAudioProcessor.h  RNBO_JuceAudioProcessorEditor.cpp  RNBO_JuceAudioProcessorEditor.h  RNBO_JuceAudioProcessorUtils.cpp  RNBO_JuceAudioProcessorUtils.h
modules/RnboExport/rnbo/adapters/juce/staticplugin/: AUInfo.plist.in  au.cpp  (+4 more)
modules/RnboExport/rnbo/adapters/max/: RNBO_MaxPresetAdapter.cpp  RNBO_MaxPresetAdapter.h  rnbo_bufferref.cpp  rnbo_bufferref.h  rnbo_data_loader.cpp  rnbo_data_loader.h
modules/RnboExport/rnbo/adapters/wasm/: RNBO_WebAssembly.cpp
modules/RnboExport/rnbo/cmake/: CCache.cmake  MinGWSTDThreads.cmake  RNBOConan.cmake  RNBODescriptionHeader.cmake  RNBOJuce.cmake  SCCache.cmake  rnbo_description.h.in
modules/RnboExport/rnbo/common/: RNBO_Array.h  RNBO_AudioSignal.h  RNBO_BaseInterface.h  RNBO_CMath.h  RNBO_Common.h  RNBO_CompilerMacros.h  RNBO_DataRef.h  RNBO_Debug.h  RNBO_EngineInterface.h  RNBO_EngineLink.h  RNBO_EventTarget.h  RNBO_ExternalBase.h  RNBO_ExternalPtr.h  RNBO_List.h  RNBO_ListHelpers.h  RNBO_Logger.h  RNBO_MIDIHelper.h  RNBO_Math.h  RNBO_MathFast.h  RNBO_ParameterInterface.h  RNBO_PatcherEventTarget.h  RNBO_PatcherFactory.h  RNBO_PatcherInterface.h  RNBO_PatcherInterfaceImpl.h  RNBO_PatcherStateInterface.h  RNBO_PlatformInterface.h  RNBO_ProbingInterface.h  RNBO_ProcessInterface.h  RNBO_Std.h  RNBO_String.h  RNBO_TimeConverter.h  RNBO_Types.h  RNBO_UniquePtr.h  RNBO_Version.h
modules/RnboExport/rnbo/src/: RNBO_AudioBufferConverter.h  RNBO_BeatTimeEvent.h  RNBO_BinaryData.h  RNBO_ClangInterface.h  RNBO_ClockEvent.h  RNBO_Config.h  RNBO_CoreObject.cpp  RNBO_CoreObject.h  RNBO_DataBuffer.cpp  RNBO_DataBuffer.h  RNBO_DataRefEvent.h  RNBO_DataRefList.cpp  RNBO_DataRefList.h  RNBO_DynamicPatcherFactory.cpp  RNBO_DynamicPatcherFactory.h  RNBO_DynamicSymbolRegistry.h  RNBO_EmptyEvent.h  RNBO_Engine.cpp  RNBO_Engine.h  RNBO_EngineCore.h  RNBO_EventList.h  RNBO_EventQueue.h  RNBO_EventSender.h  RNBO_EventVariant.h  RNBO_ExternalData.h  RNBO_ExternalLoader.cpp  RNBO_ExternalLoader.h  RNBO_FileChangeWatcher.cpp  RNBO_FileChangeWatcher.h  RNBO_HardwareDevice.h  RNBO_List.cpp  RNBO_Logger.cpp  RNBO_MaxClang.cpp  RNBO_MaxClang.h  RNBO_MessageEvent.h  RNBO_MidiEvent.h  RNBO_MidiStreamParser.h  RNBO_NullPatcher.h  RNBO_OutletEvent.h  RNBO_ParamNameHash.h  (+29 more)
modules/RnboExport/rnbo/test/: main.cpp
source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/Filter/: IIRCutoffFilter.cpp  IIRCutoffFilter.h
source/dsp/analyser/: AudioVisualiser.cpp  AudioVisualiser.h  LevelAnalyser.cpp  LevelAnalyser.h
source/dsp/compressor/: Compressor.cpp  Compressor.h  ProcessorCompressor.cpp  ProcessorCompressor.h
source/dsp/gain/: ProcessorGain.cpp  ProcessorGain.h
source/dsp/grainDelay/: GrainDelay.cpp  GrainDelay.h
source/dsp/mixer/: DryWetMixer.cpp  DryWetMixer.h
source/dsp/onnx/: InferenceThread.cpp  InferenceThread.h  OnnxProcessor.cpp  OnnxProcessor.h  RingBuffer.cpp  RingBuffer.h  WarningWindow.h
source/dsp/transientSplitter/: ProcessorTransientSplitter.cpp  ProcessorTransientSplitter.h  TransientSplitter.cpp  TransientSplitter.h
source/dsp/utils/: Envelope.cpp  Envelope.h  utils.cpp  utils.h
source/ui/CustomComponents/AdvancedParameterControl/: AdvancedParameterControl.cpp  AdvancedParameterControl.h
source/ui/CustomComponents/Footer/: FooterComponent.cpp  FooterComponent.h
source/ui/CustomComponents/Header/: HeaderComponent.cpp  HeaderComponent.h
source/ui/CustomComponents/OpenGLBackground/: OpenGLBackground.cpp  OpenGLBackground.h  ShapeVertices.h
source/ui/CustomComponents/OpenGLBackground/OpenGLUtil/: OpenGLUtil.h
source/ui/CustomComponents/ParameterControl/: ParameterControl.cpp  ParameterControl.h
source/ui/CustomComponents/ParameterControl/Slider/: CustomSliderComponent.cpp  CustomSliderComponent.h
source/ui/CustomComponents/Texture/: TextureComponent.cpp  TextureComponent.h
source/ui/CustomComponents/TransientViewer/: TransientGrid.cpp  TransientGrid.h  TransientViewer.cpp  TransientViewer.h
source/ui/CustomComponents/XYPad/: Arrow.cpp  Arrow.h  ArrowButton.cpp  ArrowButton.h  XYKnob.cpp  XYKnob.h  XYPad.cpp  XYPad.h
source/ui/LookAndFeel/: CustomFontLookAndFeel.h  CustomLabelLookAndFeel.h  SliderLookAndFeel.cpp  SliderLookAndFeel.h
source/utils/: SystemSpecs.cpp  SystemSpecs.h  colors.h
test/: benchmark.cpp
(+4 files in other folders)
